# networking-crm

./: .gitignore  README.md  pyproject.toml
.tmp_manual/: manual.db  today_manual.db
config/: schema.sql
docs/: overview.md
prompts/: system.md
scripts/: smoke_test.sh
src/networking_crm/: __init__.py  ari.py  db.py  main.py  paths.py
src/networking_crm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_smoke.py
workflows/: implementation.md
