[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "networking-crm"
version = "0.1.0"
description = "Local tool to track networking contacts, follow-ups, and notes."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
networking-crm = "networking_crm.main:main"
ari = "networking_crm.ari:main"
